src/containers/Hero/Hero.scss
@import '../../styles/variables.scss';

.hero{

    &__container {
        height: 100vh;
        display: flex;
        padding-top: 51px;
        flex-direction: column;
        
        // Small devices (phones, 568px and up)
        @media screen and (max-width: 320px) and (orientation: portrait) {
            height: 150vh;
        }
        
        @media screen and (min-width: 568px) and (orientation: landscape) {
            height: 220vh;
        }
        
        // Medium devices (tablets, 640px and up)
        @media screen and (min-width: 640px) and (orientation: landscape) {
            height: 170vh;
        }
        
        // Large devices (desktops, 1024px and up)
        @media screen and (min-width: 1024px) and (orientation: landscape) {
            height: 100vh;
        }
          
    }

    &__imageContainer {
        position: relative;
        z-index: 0;
        flex: 0;
    }
    
    &__image {
        flex: 1;
    }

    &__bottomContainer {
        flex: 0;
        position: absolute;
        bottom: 0;
        width: 100%;
        left: 0;
        display: flex;
        padding: 20px;

        align-items: flex-end;
    }

    &__bottomText {
        font-size: 20px;
        font-weight: bold;
        color: $font-color-secondary;
        line-height: 1.2;
        margin-right: auto;
        
        background-color: $aspink;
        padding: 5px 10px;
        -webkit-transform: rotate(-3deg);
        -ms-transform: rotate(-3deg);
        transform: rotate(-3deg);

        @media screen and (max-width : 500px) {
            line-height: 1;
            font-size: 15px;
        }
    }

    &__socials {
        font-size: 24px;
        flex-shrink: 0;

        > a {
            padding: 0 10px;
            transition: font-size .2s;
            line-height: 1;
            
            &:hover {
                font-size: 40px;
                color: #fff;
            }
        }

        @media screen and (max-width : 500px) {
            display: none;
        }
    }   

    &__text {
        @extend .centeredContainer;
        font-size: 20px;
        padding: 40px 70px;
        /*text-align: center;*/
        background-color: #fff;
        /*border-bottom: 1px dashed #d1d2d3;*/

        flex: none;

        > strong {
            font-weight: bold;
        }

        @media screen and (max-width : 500px) {
            font-size: 18px;
            padding: 20px 30px;
        }
    }
    
    &__links {
        color: $asblue;

        a {
            color: $asblue;
          }
    }

    &__scrollDown {
        height: 25px;
        position: absolute;
        
        z-index: 3;
        bottom: 20px;
        left: 50%;
        transform: translateX(-50%);  

        animation: jump 4s infinite;

        cursor: pointer;

        @media screen and (max-width : 500px) {
            display: none;
        }
    }
    
    &__underscore {
        color: $asiceblue;
    }
}

@keyframes jump {
    0%, 10%, 20%, 100% {
        transform: translateX(-50%) translateY(-10px)
    }
    5%, 15% {
        transform: translateX(-50%) translateY(0px)
    }
}

